packages/nestjs-trpc/cli/tests/fixtures/valid/simple-router/user.schema.ts
import { z } from 'zod';

export const userSchema = z.object({
    id: z.string(),
    name: z.string(),
});

export type User = z.infer<typeof userSchema>;
